# FrankaMPC

./: README.md
doc/: README
model/: README
model/simulation/: MPCsim.slx  acceleration.fig  calculate_params.m  csolve.m  csolve.mexw64  position.fig  sim.mat  velocity.fig
model/simulation/cvxgen/: Makefile  csolve.c  cvxsolve.m  description.cvxgen  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
model/simulation/slprj/_jitprj/: jitEngineAccessInfo.mat  s58E7EhD8t6O3fBCqXHUG7.l  s58E7EhD8t6O3fBCqXHUG7.mat  s648dh7co4JBdouZWG0UmqG.l  s648dh7co4JBdouZWG0UmqG.mat  s7FmZ8iHy3IQV37fRlt007B.l  s7FmZ8iHy3IQV37fRlt007B.mat  sF988kmdSKC8x39mHkTnZFB.l  sF988kmdSKC8x39mHkTnZFB.mat  sK30sRInwqr4rXA8RRezYrF.l  sK30sRInwqr4rXA8RRezYrF.mat  sLeLIn7gVfQJwGZ6XDq8nwE.l  sLeLIn7gVfQJwGZ6XDq8nwE.mat  sNnJUH51RhxEJxRaj9FyeGE.l  sNnJUH51RhxEJxRaj9FyeGE.mat  sbJIa5VByToPL04QlMNzgJC.l  sbJIa5VByToPL04QlMNzgJC.mat  seyXrjdLbSmERGSYlgxftDF.l  seyXrjdLbSmERGSYlgxftDF.mat  sodHQOCLxXoNMKQ4TkTXJhD.l  sodHQOCLxXoNMKQ4TkTXJhD.mat  ss4QGSvJDy6oo81ik7Kk4HF.l  ss4QGSvJDy6oo81ik7Kk4HF.mat  sudvhJC5c1sJcc2K7IrLqK.l  sudvhJC5c1sJcc2K7IrLqK.mat
model/simulation/slprj/_sfprj/EMLReport/: EeA9Iq3Hi8sAG0NQzkoSVF.mat  emlReportAccessInfo.mat  s2XhGiPpFTdeszEwFb6cPRD.mat  s58E7EhD8t6O3fBCqXHUG7.mat  s648dh7co4JBdouZWG0UmqG.mat  s7FmZ8iHy3IQV37fRlt007B.mat  sK30sRInwqr4rXA8RRezYrF.mat  sLeLIn7gVfQJwGZ6XDq8nwE.mat  sNnJUH51RhxEJxRaj9FyeGE.mat  sXwWC38rlHa8Zh08faLJwhB.mat  sbAbOyEsGnKKAnhv1NjeyDE.mat  sbJIa5VByToPL04QlMNzgJC.mat  se87h8qqBSnRkIfuwOwUdwH.mat  seyXrjdLbSmERGSYlgxftDF.mat  sjBnEuaG4harP5ZAXPwRZyG.mat  soF1JeOeBJucNxlL5ZURR3.mat  sodHQOCLxXoNMKQ4TkTXJhD.mat  ss4QGSvJDy6oo81ik7Kk4HF.mat  suCXCJ9VRvcf0LXutLefOcD.mat  sudvhJC5c1sJcc2K7IrLqK.mat
model/simulation/slprj/_sfprj/precompile/: 9aE35qmxcpMlcAY6a6ZA2B.mat  (+18 more)
report/: .gitignore  README
report/final/: .gitignore  .latexmkrc  bibliography.bib  main.tex
report/final/example/: LTHtwocol.cls  bibliography.bib  final.tex
report/plan/example/: .gitignore  .latexmkrc  plan.tex
report/plan/example/figures/: gantt.eps
report/plan/example/sec/: Equipments.tex  Labour.tex  Modelling.tex  Summary.tex  TimePlan.tex
schematics/: README
src/: MPC_plot.m  MPC_trajectory_plot.m  README  sim_plot.m
src/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver  testsolver.c  util.c
src/data/result_under_perturbation/: Control_DataRecord.txt  Joint1.fig  Joint2.fig  Joint3.fig  Joint4.fig  Joint5.fig  Joint6.fig  Joint7.fig  MPC_DataRecord.txt  Reference.txt
src/data/result_without_perturbation/: Control_DataRecord.txt  Joint1.fig  Joint2.fig  Joint3.fig  Joint4.fig  Joint5.fig  Joint6.fig  Joint7.fig  MPC_DataRecord.txt  Reference.txt
src/data/simulation_data/: simdata.mat  simfig.fig
src/data/trajectory_result_without_perturbation/: Control_DataRecord.txt  MPC_DataRecord.txt  MPC_trajectory_J4.fig  Reference.txt
src/examples/: 0_MPC.cpp  0_MPC_velocity_openloop.cpp  0_freemove.cpp  0_freemove_torque.cpp  0_freemove_velocity.cpp  0_generate_joint_position_motion.cpp  0_generate_joint_velocity_motion.cpp  1_MPC_velocity_openloop.cpp  CMakeLists.txt  CTestTestfile.cmake  Control_DataRecord.txt  MPC.cpp  MPC_openloop.cpp  MPC_velocity_openloop.cpp  Makefile  cartesian_impedance_control.cpp  cmake_install.cmake  generate_joint_position_motion.cpp  ldl.c  make_csolve.m  matrix_support.c  mpc_target.cpp  robotpro.cpp  solver.c  solver.h  util.c
src/saved_runs/0_MPC_velocity_openloop/: Control_DataRecord.txt  MPC_DataRecord.txt
src/saved_runs/feedback_seminar2/: MPC_DataRecord.txt
src/simulation/slprj/_jitprj/: sebV8Xh4q1xFoeUi5ZGEJL.l  sebV8Xh4q1xFoeUi5ZGEJL.mat
test/: README
(+20 files in other folders)
